--- a/dev/bio.html
+++ b/dev/bio.html
@@ -82,7 +82,9 @@ img.emoji {
     <li id = "menu-item-9" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-9">
         <a href = "https://anthonynieszel.github.io/">Home</a></li>
     <li id = "menu-item-10" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-10">
-            <a href = "https://anthonynieszel.github.io/pages/testpage.html">Projects</a></li>
+        <a href = "https://anthonynieszel.github.io/pages/testpage.html">Portfolio</a></li>
+    <li id = "menu-item-10" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-10">
+        <a href = "https://anthonynieszel.github.io/pages/testpage.html">Personal Projects</a></li>
 
 </ul>
 
@@ -125,7 +127,7 @@ img.emoji {
 <div id = "post-5" class = "single single-post post-5 page type-page status-publish hentry">
 <div class = "post-container">
     <div class = "post-header">
-        <h1 class = "post-title">My Background</h1>
+        <h1 class = "post-title">About Me</h1>
     </div>
 
 <div class = "post-inner">
@@ -135,7 +137,7 @@ img.emoji {
         <a href = "https://anthonynieszel.github.io/img/an1.jpg">
         <img aria-describedby = "caption-headshot" loading = "lazy" class = "size-large wp-image-29"
         src = "https://anthonynieszel.github.io/img/an1.jpg"
-            alt = "It's me!" width = "225" height = "225" /></a>
+            alt = "It's me!"  title = "It's me!asdf" width = "225" height = "225" /></a>
         <p id = "caption-headshot" class = "wp-caption-text">seeing how a png looks in this div.</p>
     </div>
     <p>This is where the executive summary will go.</p>
