edits to menu bar

--- a/dev/bio.html
+++ b/dev/bio.html
@@ -79,12 +79,16 @@ img.emoji {
 
 <ul class = "main-menu">
 
-    <li id = "menu-item-9" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-9">
+    <li id = "menu-item-1" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-1">
         <a href = "https://anthonynieszel.github.io/">Home</a></li>
-    <li id = "menu-item-10" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-10">
-        <a href = "https://anthonynieszel.github.io/pages/testpage.html">Portfolio</a></li>
-    <li id = "menu-item-10" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-10">
+    <li id = "menu-item-2" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-2">
+        <a href = "https://anthonynieszel.github.io/">About Me</a></li>        
+    <li id = "menu-item-3" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-3">
+        <a href = "https://anthonynieszel.github.io/pages/testpage.html">Work Portfolio</a></li>
+    <li id = "menu-item-4" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-4">
         <a href = "https://anthonynieszel.github.io/pages/testpage.html">Personal Projects</a></li>
+    <li id = "menu-item-5" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-5">
+        <a href = "https://github.com/anthonynieszel">GitHub</a></li>
 
 </ul>
 
@@ -117,7 +121,7 @@ img.emoji {
 <div class = "header section-inner">
 <div class = "blog-title"><span style = "color: #fff">Welcome!</span></div>
 <div class = "blog-description">
-    <p>description or some blurb goes here? maybe delete?</p>
+    <p>this, or something similar, will eventually become the index/landing page. brief blurb about me then menu links to resume and portfolios</p>
 </div>
 </div>
 
@@ -137,7 +141,7 @@ img.emoji {
         <a href = "https://anthonynieszel.github.io/img/an1.jpg">
         <img aria-describedby = "caption-headshot" loading = "lazy" class = "size-large wp-image-29"
         src = "https://anthonynieszel.github.io/img/an1.jpg"
-            alt = "It's me!"  title = "It's me!asdf" width = "225" height = "225" /></a>
+            alt = "It's me!"  title = "It's me!" width = "225" height = "225" /></a>
         <p id = "caption-headshot" class = "wp-caption-text">seeing how a png looks in this div.</p>
     </div>
     <p>This is where the executive summary will go.</p>
