EOD commit - finished a portfolio shell, manually updated to current fa package, and lots of documentation

--- a/dev/bio.html
+++ b/dev/bio.html
@@ -96,7 +96,7 @@ img.emoji {
     <li id = "menu-item-2" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-2">
         <a href = "https://anthonynieszel.github.io/">About Me</a></li>        
     <li id = "menu-item-3" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-3">
-        <a href = "https://anthonynieszel.github.io/dev/portfolio.html">Work Portfolio</a></li>
+        <a href = "https://anthonynieszel.github.io/paegs/portfolio1.html">Work Portfolio</a></li>
     <li id = "menu-item-4" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-4">
         <a href = "https://anthonynieszel.github.io/pages/testpage.html">Personal Projects</a></li>
     <li id = "menu-item-5" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-5">
@@ -125,7 +125,7 @@ img.emoji {
     <li id = "menu-item-7" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-7">
         <a href = "https://anthonynieszel.github.io/">About Me</a></li>        
     <li id = "menu-item-8" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-8">
-        <a href = "https://anthonynieszel.github.io/dev/portfolio.html">Work Portfolio</a></li>
+        <a href = "https://anthonynieszel.github.io/pages/portfolio1.html">Work Portfolio</a></li>
     <li id = "menu-item-9" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-9">
         <a href = "https://anthonynieszel.github.io/pages/testpage.html">Personal Projects</a></li>
     <li id = "menu-item-10" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-10">
