--- a/dev/bio.html
+++ b/dev/bio.html
@@ -96,7 +96,7 @@ img.emoji {
     <li id = "menu-item-2" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-2">
         <a href = "https://anthonynieszel.github.io/">About Me</a></li>        
     <li id = "menu-item-3" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-3">
-        <a href = "https://anthonynieszel.github.io/paegs/portfolio1.html">Work Portfolio</a></li>
+        <a href = "https://anthonynieszel.github.io/pages/portfolio1.html">Work Portfolio</a></li>
     <li id = "menu-item-4" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-4">
         <a href = "https://anthonynieszel.github.io/pages/testpage.html">Personal Projects</a></li>
     <li id = "menu-item-5" class = "menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-5">
@@ -160,7 +160,7 @@ img.emoji {
     <div id = "headshot" style = "width: 225px" class = "wp-caption aligncenter">
         <a href = "https://www.linkedin.com/in/anthonynieszel">
         <img aria-describedby = "caption-headshot" loading = "lazy" class = "size-large wp-image-29"
-        src = "img/an1.jpg"
+        src = "/img/an1.jpg"
             alt = "It's me!"  title = "It's me!" width = "225" height = "225" /></a>
         <p id = "caption-headshot" class = "wp-caption-text">seeing how a png looks in this div.</p>
     </div>
